src/ui/snapshots/kvn_tui__ui__layout__tests__draw_support_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                               ┌──────────────────────────────────────────────┐                                │
│                               │                Support kvn 🚀                 │                                │
│                               │                                              │                                │
│                               │kvn is free, open source, and built with care.│                                │
│                               │                                              │                                │
│                               │If you find it useful, consider supporting its│                                │
│                               │            continued development.            │                                │
│                               │                                              │                                │
│                               │  Your support helps cover AI tools, testing, │                                │
│                               │  bug fixes, improvements, and new features.  │                                │
│                               │                                              │                                │
│                               │             Support development              │                                │
│                               │             Remind me later                  │                                │
│                               │             Don't show again                 │                                │
│                               │                                              │                                │
│                               │             󰌑 confirm · q/󱊷 close            │                                │
│                               └──────────────────────────────────────────────┘                                │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                                         DoH  Global
