src/ui/snapshots/kvn_tui__ui__layout__tests__draw_theme_settings_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────┌───────────────────────────────┐───────────────────────────────────────┐
│ No sources. Press p to paste a profile│       Settings › Theme        │                                       │
│URL from clipboard.                    │                               │                                       │
│                                       │       catppuccin              │                                       │
│                                       │       catppuccin-latte        │                                       │
│                                       │       ethereal                │                                       │
│                                       │       everforest              │                                       │
│                                       │       flexoki-light           │                                       │
│                                       │       gruvbox                 │                                       │
│                                       │       hackerman               │                                       │
│                                       │       kanagawa                │                                       │
│                                       │       last-horizon            │                                       │
│                                       │       lumon                   │                                       │
│                                       │       lupine                  │                                       │
│                                       │       matte-black             │                                       │
│                                       │       miasma                  │                                       │
│                                       │       nord                    │                                       │
│                                       │       osaka-jade              │                                       │
│                                       │       retro-82                │                                       │
│                                       │       ristretto               │                                       │
│                                       │       rose-pine               │                                       │
│                                       │       solitude                │                                       │
│                                       │       tokyo-night             │                                       │
│                                       │       vantablack              │                                       │
│                                       │       white                   │                                       │
│                                       │                               │                                       │
│                                       │      󰌑 apply · q/󱊷 close      │                                       │
│                                       └───────────────────────────────┘                                       │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                                         DoH  Global
