src/ui/snapshots/kvn_tui__ui__layout__tests__exact_minimum_size_draws_the_single_pane_ui.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, MIN_TERMINAL_WIDTH, MIN_TERMINAL_HEIGHT)"
---
┌ Traffic ───────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connectio │
└────────────────────────────────────────────────────────────────────┘
┌ Profiles ──────────────────────────────────────────────────────────┐
│ └ A                                             vless  a:1         │
│                                                                    │
│ Sub  (off)                                                        │
│ └ B                                             vless  b:2         │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                              DoH  Global
[70x15]
